--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TW-Taller | Rejilla</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="shortcut icon" href="CSS3-Logo.png" type="image/x-icon">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1234567890123456" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Taller Tecnologías Web - Sistema de Rejilla</h1>
@@ -24,7 +25,7 @@
         <div class="ads1">ADS</div>
         <div class="footer1">FOOTER</div>
     </div>
-    <br><br>
+    <br><br><hr><br>
     <h2>
         Como podemos ver, la estructura que se utilizó para crear la rejilla con CSS es una estructura normal que muchos sitios web utilizan, otro ejemplo
         de rejilla tomando como base "twitter for web" sería:
@@ -35,6 +36,47 @@
         <div class="sidebar2">SIDEBAR</div>
         <div class="sidebar2-1">SIDEBAR</div>
         <div class="container2">CONTAINER</div>
+    </div>
+    <br><br><br><hr><br>
+    <h2>
+        Llevando al uso la primera plantilla de rejilla creada con CSS, obtendríamos lo siguiente:
+    </h2>
+    <div class="rejilla3">
+        <div class="header3">
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-grid-1x2-fill" viewBox="0 0 16 16">
+                    <path d="M0 1a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm9 0a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1V1zm0 9a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1v-5z"/>
+                </svg>
+                Aplicación de Grid con CSS
+            </div>
+        </div>
+        <div class="navbar3">
+            <div>
+                <input type="text" placeholder="Buscar" class="nav">
+                <button class="search"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="black" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                </svg>
+                </button>
+            </div>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </div>
+        <div class="sidebar3">
+            SIDEBAR
+        </div>
+        <div class="container3">CONTAINER
+            <div class="article3">
+                
+            </div>
+        </div>
+        <div class="ads3">
+            <p><a href="https://www.brainlang.com/land/?utm_term=blog_img_footer&amp;utm_campaign=SEO-blog&amp;utm_source=SEO&amp;utm_content=blog_que-significa-en-espanol-lmao-y-que-significa-lol"><img style="width: 100%; max-width: 400px;" src="https://static.brainlang.com/imgs/imgs_web/img_btn_fixed_footer_man.jpg?v1" alt="Descubre el método Visual Listening"><br> </a></p>
+        </div>
+        <div class="footer3">FOOTER</div>
     </div>
 </body>
 </html>
