--- a/index.html
+++ b/index.html
@@ -66,17 +66,51 @@
             </ul>
         </div>
         <div class="sidebar3">
-            SIDEBAR
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-grid-1x2-fill" viewBox="0 0 16 16">
+                    <path d="M0 1a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V1zm9 0a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1V1zm0 9a1 1 0 0 1 1-1h5a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1h-5a1 1 0 0 1-1-1v-5z"/>
+                </svg>
+                <span style="font-size: x-large;">Grid con CSS</span>
+            </div>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+            <div></div>
         </div>
-        <div class="container3">CONTAINER
+        <div class="container3">
+            <hr>
+            <h1>¿Qué es el Sistema de Rejilla?</h1>
+            <hr>
             <div class="article3">
-                
+                <p style="font-size: large; line-height: 30px;">
+                    El sistema de rejilla está pensado para ayudarnos en la disposición de los contenidos de nuestra web y su adaptación a los diferentes tamaños de pantalla de forma automática. Para ello tenemos que poner el contenido dentro de celdas o columnas que irán dentro de filas.
+                    <br><br>
+                    Sistemas como 960 Grid System fueron pioneros en crear una base de código CSS para que los diseñadores pudieran posicionar los elementos en una distribución de filas y columnas. El propio Bootstrap incluye entre otras cosas un sistema de rejilla. Al final, estos sistemas funcionaron pero tenían varios problemas:
+                    <br><br>
+                    Agregaban peso al CSS, con código de cientos de clases que muchas veces ni siquiera llegabas a usar.
+                    Habia que aplicar constantemente clases y nombre que ensuciaban mucho el HTML.
+                    Creaba código de muy difícil mantenimiento, haciendo que el proyecto estuviera ligado de manera muy directa con un sistema propietario.
+                    Sin embargo, ahora Grid es un estándar y no es necesario recargar ni ensuciar el código para aplicarlo. Todo se aplica directamente desde el CSS, por medio de nuevos atributos, valores y unidades con una variada sintaxis. Además, un sitio con Grid resulta sencillo de mantener y de aplicar otras herramientas de CSS3 como las mediaqueries, y, por supuesto, es totalmente adaptable a los dispositivos (responsive).
+                    <br><br>
+                    Un ejemplo efectivo del sistema de rejilla o grid es el que está descrito en esta página web, la cual cabe mencionar, fue diseñada únicamente con HTML y CSS sin la aplicación de ningún framework CSS.
+                </p>
             </div>
         </div>
         <div class="ads3">
             <p><a href="https://www.brainlang.com/land/?utm_term=blog_img_footer&amp;utm_campaign=SEO-blog&amp;utm_source=SEO&amp;utm_content=blog_que-significa-en-espanol-lmao-y-que-significa-lol"><img style="width: 100%; max-width: 400px;" src="https://static.brainlang.com/imgs/imgs_web/img_btn_fixed_footer_man.jpg?v1" alt="Descubre el método Visual Listening"><br> </a></p>
         </div>
-        <div class="footer3">FOOTER</div>
+        <div class="footer3">
+            <div>
+            Sistema de Rejilla - por AR, AG y DM 2022
+            </div>
+            <div>
+                Tecnologías Web, N1113.
+            </div>
+        </div>
     </div>
+    <br><br><br><br>
 </body>
 </html>
